--- a/TestProjectXamarin/TestProjectXamarin.Android/TestProjectXamarin.Android.csproj
+++ b/TestProjectXamarin/TestProjectXamarin.Android/TestProjectXamarin.Android.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.2</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.4.118</Version>
     </PackageReference>
@@ -61,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Data\SQLite_Android.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Data\NetworkConnection.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
